Speed and Major Refactoring: Implementation of materialized view for safety metrics; last modified/last analyzed removed on PlanetOsmLine; Valhalla: Remove Asynchronous calls, clean up error handling, strict typs; Optimize Import; Removed Profiles; Simplify Scheduling Service; Traffic Signals: import via db; Logging: Print after init, print for subtasks; RideEntity: calls rideService, simplify file checks; remove bloomfilter, remove asynchronous calls, clean coordinates, bulk request to speed up database access.